# core-scraper-service

./: .env-default  .env.example  .gitignore  .pre-commit-config.yaml  .serverlessignore  README.md  lambda_handler.py  main.py  package.json  pyproject.toml  requirements-lambda.txt  requirements.txt  serverless.yml
.code_quality/: mypy.ini  ruff.toml
.github/actions/configure-aws/: action.yml
.github/actions/deploy-lambda/: action.yml
.github/actions/deploy-summary/: action.yml
.github/actions/determine-stage/: action.yml
.github/actions/generate-version/: action.yml
.github/actions/setup-environment/: action.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: code-quality.yml  deploy.yml  test.yml
app/: __init__.py  __main__.py
app/api/: __init__.py
app/api/v1/: __init__.py  routers.py
app/api/v1/endpoints/: __init__.py  scraper.py
app/core/: database.py  errors.py  settings.py
app/core/browsers/: __init__.py  abc.py  chrome.py  tor.py
app/serializers/: __init__.py  scraper.py
app/services/: __init__.py  scraper_service.py
docker/: .dockerignore  Dockerfile.chrome  Dockerfile.dev  Dockerfile.lambda  Dockerfile.tor  docker-compose.yml  run.sh
scripts/: download-tor-browser.sh  install-tor-browser-local.sh
source/: browser.py  data.py  domain.py  explorer.py  main.py
source/abc/: browser.py
source/browsers/: chrome.py
source/core/browsers/: chrome.py
source/core/serializers/: content.py
source/serializers/: content.py
source/tasks/: __init__.py  explore_outside.py  extract_urls.py  initial_data.py  storage_data.py
source/workflows/: workflow_extract_outside.py
src/: data.py
src/browsers/: chrome.py
tests/: __init__.py  test_browsers.py  test_errors.py  test_serializers.py  test_settings.py
