[tool.poetry]
name = "core-scraper-service"
package-mode = false
version = "0.1.0"
description = "🐍 Tor-Network - Core"
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
tbselenium = "^0.9.0"
get-gecko-driver = "^1.5.0"
pydantic = "^2.12.0"
uvicorn = "^0.38.0"
fastapi = "^0.122.0"
mangum = "^0.17.0"
sqlalchemy = "^2.0.44"
pymysql = "^1.1.2"
pydantic-settings = "^2.12.0"
h11 = ">=0.16.0"
idna = ">=3.7"
requests = ">=2.32.4"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
# unittest comes with Python, no extra dependencies needed

[tool.poetry.group.code-quality]
optional = true

[tool.poetry.group.code-quality.dependencies]
ruff = "^0.8.0"
flake8 = "^7.0.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
